@@ -1,5 +1,12 @@
 2006-04-02 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
+	* include/GParted_Core.h,
+	  src/GParted_Core.cc: an initial solution for the automount problem.
+	  I still need to add something to prevent just created partitions from
+	  getting mounted. (see #324220 for more info)
+
+2006-04-02 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
 	* include/Dialog_Filesystems.h,
 	  include/GParted_Core.h,
 	  include/Makefile.am,
